# gitversion-rs

./: .git-warden.yml  .gitignore  .gitversion.yml  AGENTS.md  Cargo.toml  GitVersion.yml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  cliff.toml  justfile  lefthook.yml  release.toml
.github/: renovate.json
.github/workflows/: ci.yml  release-draft.yml  release-publish.yml  release.yml
examples/: README.md  build_inject.rs
examples/exec-config-inject/: GitVersion.yml  README.md  build.rs
locales/: app.yml
src/: app.rs  cache.rs  exec.rs  i18n.rs  lib.rs  main.rs  remote.rs
src/buildagent/: mod.rs
src/cli/: mod.rs
src/config/: defaults.rs  effective.rs  loader.rs  mod.rs  model.rs
src/git/: mod.rs
src/output/: files.rs  generator.rs  mod.rs  variables.rs
src/tui/: mod.rs
src/version/: calculation.rs  mod.rs  semver.rs
tests/: build_fixtures.sh  buildagent.rs  fixtures.md  fixtures.rs  gitops.rs  updatefiles.rs
