[package]
name = "gitversion-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Rust port of GitVersion — calculates semantic versions from Git history. Full feature port with a Ratatui TUI."
license = "MIT"
default-run = "gitversion-rs"

# 라이브러리 크레이트 이름은 gitversion-rs(임포트 시 gitversion_rs).
[lib]
name = "gitversion_rs"
path = "src/lib.rs"

[[bin]]
name = "gitversion-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
gix = { version = "0.84", features = ["blocking-http-transport-reqwest-rust-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
quick-xml = "0.40"
toml_edit = "0.25"
sha1 = "0.11"
rust-i18n = "3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3"

[dev-dependencies]
flate2 = "1"
tar = "0.4"

[profile.release]
lto = true
strip = true
